ingress-api.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  creationTimestamp: "2020-01-20T10:52:02Z"
  generation: 3
  name: api
  namespace: todo-prod
  resourceVersion: "55411"
  selfLink: /apis/extensions/v1beta1/namespaces/todo-prod/ingresses/api
  uid: 856febf7-9f74-478e-8683-344df6930025
spec:
  rules:
  - host: todo.codesanctum.net
    http:
      paths:
      - backend:
          serviceName: todo-backend
          servicePort: 3000
        path: /api
  tls:
  - hosts:
    - todo.codesanctum.net
    secretName: todo-codesanctum-net-secret
status:
  loadBalancer:
    ingress:
    - ip: 192.168.0.11
